# ticket-system

./: .gitignore  Cargo.toml  build.rs.disabled
src/: auth.rs  constants.rs  database.rs  id_types.rs  main.rs  schedule.rs  ticket.rs  train.rs
