[package]
name = "ticket"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
sled = "0.34"
arc-swap = "1.6.0"
serde_cbor = "0.11"
anyhow = "1.0"

[profile.dev]
opt-level = 1
